Fix ArrayList lol